samples/_failures_safe/1761436595_9195bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18da3efa.c: In function ‘main’:
./samples/SAFE/__tmp_18da3efa.c:140:9: error: expected declaration or statement at end of input
  140 |         destroy_matrix(&mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_18da3efa.c:140:9: error: expected declaration or statement at end of input
